# linalg_project

./: CMakeLists.txt  README.md  git_test.cpp
source/: CMakeLists.txt  csr_matrix.hpp  dence.hpp  dok.hpp  housholder.hpp  iteration_methods.hpp  solver  solver.cpp  tridiagonal_matrix.hpp  tridiagonal_solver.hpp
source/tridiagonal_matrix/: solver  solver.cpp  tridiagonal_solver.hpp
test/: CMakeLists.txt  csr_test.cpp  dence_test.cpp  task_4.cpp  tridiagonal_test.cpp
test/testfiles/: test_1.txt
tridiagonal matrix/: solver.cpp  test_1.txt
tridiagonal_matrix/: solver.cpp
